# Retr0Mine

./: .gitignore  BUILD.md  CMakeLists.txt  MinesweeperSolver.cpp  MinesweeperSolver.h  README.md  Retr0Mine.pro  Retr0Mine_SteamDeckInstaller.desktop  installer.iss  installer.sh  main.cpp
.assets/: icon.tga
.github/workflows/: build-and-release.yml  build.yml  steam-builds.yml
.steam/controller_config/: game_actions_3478030.vdf
GameTimer/: GameTimer.cpp  GameTimer.h
MainWindow/: MainWindow.cpp  MainWindow.h
MinesweeperLogic/: MinesweeperLogic.cpp  MinesweeperLogic.h  minesweeperlogic.cpp  minesweeperlogic.h
Resources/: resources.qrc
Resources/icons/: icons.qrc
Resources/qml/: AboutPage.qml  AudioEffectsEngine.qml  Cell.qml  Colors.qml  DifficultyLayout.qml  FlagToast.qml  GameArea.qml  GameOverPopup.qml  InfoIcon.qml  LeaderboardPage.qml  LoadWindow.qml  Main.qml  MainWindow.qml  Retr0MineSettings.qml  SaveWindow.qml  SettingsPage.qml  SidebarDelegate.qml  SidebarSeparator.qml  TempScrollBar.qml  TopBar.qml  WelcomePage.qml  qml.qrc
Resources/qml/+FluentWinUI3/: CellFrame.qml  DifficultyLayout.qml  GameArea.qml  SidebarDelegate.qml  SidebarSeparator.qml
Resources/qml/+Fusion/: CellFrame.qml  DifficultyLayout.qml  GameArea.qml  SidebarDelegate.qml
Resources/qml/+Universal/: CellFrame.qml  GameArea.qml  MainWindow.qml  SidebarDelegate.qml
Resources/translations/: Retr0Mine_de.ts  Retr0Mine_en.ts  Retr0Mine_es.ts  Retr0Mine_fr.ts  Retr0Mine_it.ts  Retr0Mine_ja.ts  Retr0Mine_ko.ts  Retr0Mine_ru.ts  Retr0Mine_zh_CN.ts  Retr0Mine_zh_TW.ts
SteamIntegration/: SteamIntegration.cpp  SteamIntegration.h
Utils/: Utils.cpp  Utils.h
i18n/: Retr0Mine_en.ts  Retr0Mine_fr.ts
include/: gamecore.h  gamelogic.h  gametimer.h  gridbridgehelper.h  gridgenerator.h  mainwindow.h  minesweeperlogic.h  minesweepersolver.h  steamintegration.h
qml/: AboutPopup.qml  AudioEffectsEngine.qml  Cell.qml  Colors.qml  CoopModeChooser.qml  ErrorWindow.qml  GameAudio.qml  GameConstants.qml  GameGrid.qml  GameOverPopup.qml  GameSettings.qml  GameState.qml  GameView.qml  GridLoadingIndicator.qml  InfoIcon.qml  LeaderboardPage.qml  LoadWindow.qml  LogWindow.qml  Main.qml  MainMenu.qml  MainWindow.qml  MultiplayerChat.qml  OverlayMenu.qml  PingIndicator.qml  PostgamePopup.qml  RadialMenu.qml  Retr0MineSettings.qml  SaveManager.qml  SaveWindow.qml  ScrollingArea.qml  SettingsPage.qml  SettingsWindow.qml  SidebarSeparator.qml  SignalIndicator.qml  TempScrollBar.qml  TopBar.qml  WelcomePage.qml  WelcomePopup.qml
qml/+FluentWinUI3/: GameArea.qml  SidebarSeparator.qml
qml/+Fusion/: CellFrame.qml
qml/Common/: AnimatedPopup.qml  CircularProgressBar.qml  CustomDelegate.qml  CustomMenuItem.qml  ImageProgressBar.qml  NfButton.qml  NfComboBox.qml  NfRadioButton.qml  NfSlider.qml  NfSpinBox.qml  NfSwitch.qml
qml/Debug/: DebugFrame.qml
qml/Popups/: AboutPopup.qml  ConnectionLostPopup.qml  CoopModeChooserPopup.qml  GenerationPopup.qml  InviteReceivedPopup.qml  LeaderboardPopup.qml  LoadPopup.qml  MatchmakingPopup.qml  MultiplayerErrorPopup.qml  MultiplayerPopup.qml  PausePopup.qml  PlayerLeftPopup.qml  PostgamePopup.qml  PrivateSessionPopup.qml  RestorePopup.qml  RulesPopup.qml  SavePopup.qml  WelcomePopup.qml
qml/SettingsPanes/: AccessibilityPane.qml  AdvancedPane.qml  DifficultyPane.qml  GameplayPane.qml  LanguagePane.qml  MultiplayerPane.qml  ShortcutsPane.qml  SoundsPane.qml  VisualsPane.qml
qml/Singletons/: AudioEngine.qml  AutoplayManager.qml  CellRadialHelper.qml  ComponentsContext.qml  Constants.qml  GameAudio.qml  GameConstants.qml  GameSettings.qml  GameState.qml  GridBridge.qml  LogManager.qml  MouseTracker.qml  NetworkManager.qml  SaveManager.qml  SteamInputHandler.qml  UserSettings.qml
resources/cursors/: cursors.qrc
resources/fonts/: fonts.qrc
resources/icons/: icons.qrc
resources/images/: images.qrc
resources/sounds/: sounds.qrc
src/: gamecore.cpp  gamelogic.cpp  gametimer.cpp  gridbridgehelper.cpp  gridgenerator.cpp  main.cpp  mainwindow.cpp  minesweeperlogic.cpp  minesweepersolver.cpp  steamintegration.cpp
tools/: Retr0Mine_SteamDeckInstaller.desktop  fwu.py  installer.iss  installer.sh  md2steam.py
translations/: retr0mine_en.ts  retr0mine_fr.ts
